--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zKG-II-gZM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="hmS-Pf-eTw" customClass="LoginViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nYk-gm-SKJ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6fm-1C-b2S">
-                                <rect key="frame" x="48" y="221" width="279" height="30"/>
+                                <rect key="frame" x="48" y="221" width="224" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kj4-l0-gvD">
                                         <rect key="frame" x="0.0" y="0.0" width="41" height="30"/>
@@ -28,7 +28,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="397-Bj-84Z">
-                                        <rect key="frame" x="41" y="0.0" width="238" height="30"/>
+                                        <rect key="frame" x="41" y="0.0" width="183" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -36,7 +36,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DmU-23-aAE">
-                                <rect key="frame" x="16" y="293" width="311" height="30"/>
+                                <rect key="frame" x="16" y="293" width="256" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FN5-eE-qLm">
                                         <rect key="frame" x="0.0" y="0.0" width="74" height="30"/>
@@ -45,7 +45,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V56-Qf-1GV">
-                                        <rect key="frame" x="74" y="0.0" width="237" height="30"/>
+                                        <rect key="frame" x="74" y="0.0" width="182" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -53,17 +53,17 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="gqa-LR-la4">
-                                <rect key="frame" x="23" y="329" width="329" height="315"/>
+                                <rect key="frame" x="23" y="329" width="274" height="216"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bH1-xd-Sbn">
-                                        <rect key="frame" x="145.5" y="0.0" width="38" height="157.5"/>
+                                        <rect key="frame" x="118" y="0.0" width="38" height="108"/>
                                         <state key="normal" title="Login"/>
                                         <connections>
                                             <action selector="loginButtonPressed:" destination="hmS-Pf-eTw" eventType="touchUpInside" id="nKA-98-7Rr"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqq-zs-1SN">
-                                        <rect key="frame" x="0.0" y="157.5" width="329" height="157.5"/>
+                                        <rect key="frame" x="0.0" y="108" width="274" height="108"/>
                                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -109,7 +109,7 @@
                 <navigationController id="Zx8-oS-K14" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Map" id="Zat-IT-hgj"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="flL-AQ-zz5">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -125,11 +125,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kCg-lH-GWp">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -152,6 +152,7 @@
                             <barButtonItem systemItem="add" id="ZAO-Z3-1s2">
                                 <connections>
                                     <action selector="addNewLocation:" destination="BYZ-38-t0r" id="KrX-IN-8Jk"/>
+                                    <segue destination="28O-JK-JD0" kind="presentation" id="1kC-3i-XiK"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem systemItem="refresh" id="QmN-UF-FPb">
@@ -169,20 +170,94 @@
             </objects>
             <point key="canvasLocation" x="229.59999999999999" y="1002.5487256371815"/>
         </scene>
+        <!--New Location View Controller-->
+        <scene sceneID="Pul-jx-Dv2">
+            <objects>
+                <viewController id="Fbx-tc-taI" customClass="NewLocationViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mvv-9q-Ku4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g3b-HV-XU3">
+                                <rect key="frame" x="53" y="173" width="214" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="86M-yA-Hgc">
+                                <rect key="frame" x="53" y="241" width="214" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zre-cV-18j">
+                                <rect key="frame" x="114" y="312" width="92" height="30"/>
+                                <state key="normal" title="Find Location"/>
+                                <connections>
+                                    <action selector="findLocation:" destination="Fbx-tc-taI" eventType="touchUpInside" id="awy-kh-dCI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Zre-cV-18j" firstAttribute="top" secondItem="86M-yA-Hgc" secondAttribute="bottom" constant="41" id="AVc-Lc-TsD"/>
+                            <constraint firstItem="NxO-DP-hpf" firstAttribute="trailing" secondItem="g3b-HV-XU3" secondAttribute="trailing" constant="53" id="SO9-8j-NcW"/>
+                            <constraint firstItem="Zre-cV-18j" firstAttribute="leading" secondItem="NxO-DP-hpf" secondAttribute="leading" constant="114" id="ZBJ-SZ-x7p"/>
+                            <constraint firstItem="NxO-DP-hpf" firstAttribute="trailing" secondItem="Zre-cV-18j" secondAttribute="trailing" constant="114" id="Zpv-tf-CcQ"/>
+                            <constraint firstItem="g3b-HV-XU3" firstAttribute="top" secondItem="NxO-DP-hpf" secondAttribute="top" constant="109" id="byY-9Y-dCu"/>
+                            <constraint firstItem="86M-yA-Hgc" firstAttribute="leading" secondItem="NxO-DP-hpf" secondAttribute="leading" constant="53" id="dh8-Hf-846"/>
+                            <constraint firstItem="g3b-HV-XU3" firstAttribute="leading" secondItem="NxO-DP-hpf" secondAttribute="leading" constant="53" id="hsD-XA-XWk"/>
+                            <constraint firstItem="NxO-DP-hpf" firstAttribute="trailing" secondItem="86M-yA-Hgc" secondAttribute="trailing" constant="53" id="kYh-BF-fb4"/>
+                            <constraint firstItem="86M-yA-Hgc" firstAttribute="top" secondItem="g3b-HV-XU3" secondAttribute="bottom" constant="38" id="pfv-eA-YGl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NxO-DP-hpf"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="z7j-os-cad">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="tPc-V5-rMz">
+                            <connections>
+                                <action selector="cancel:" destination="Fbx-tc-taI" id="bjj-vE-HRT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="locationNameTextField" destination="g3b-HV-XU3" id="gxM-vX-2qo"/>
+                        <outlet property="urlTextField" destination="86M-yA-Hgc" id="R4O-g0-LOl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CjG-ju-i7L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3095.625" y="569.36619718309862"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lYV-KG-x69">
+            <objects>
+                <navigationController id="28O-JK-JD0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hcO-vA-81m">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Fbx-tc-taI" kind="relationship" relationship="rootViewController" id="oAK-nj-TWe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ED8-yG-R0U" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2074" y="546"/>
+        </scene>
         <!--On The Map-->
         <scene sceneID="cHz-3N-o72">
             <objects>
                 <tableViewController id="utP-P2-LXj" customClass="LocationsTableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pEL-3L-qf8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" textLabel="2e4-qC-aLL" detailTextLabel="qei-VU-TZT" style="IBUITableViewCellStyleSubtitle" id="Y6e-tJ-Y8b">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y6e-tJ-Y8b" id="lQA-OF-ve4">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2e4-qC-aLL">
@@ -218,6 +293,7 @@
                             <barButtonItem systemItem="add" id="70c-tT-n1j">
                                 <connections>
                                     <action selector="addNewLocation:" destination="utP-P2-LXj" id="P2Q-vt-ApL"/>
+                                    <segue destination="28O-JK-JD0" kind="presentation" id="Z6W-Mx-wKq"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem systemItem="refresh" id="JIY-L7-4JD">
@@ -242,7 +318,7 @@
                 <navigationController id="kdd-bp-XCR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="List" id="3Ev-Ut-kRz"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ngn-9H-uFt">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -272,4 +348,7 @@
             <point key="canvasLocation" x="-1226" y="152"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="1kC-3i-XiK"/>
+    </inferredMetricsTieBreakers>
 </document>
